﻿X.X.X (XXXX.XX.XX)
------------------
+ Changed base path of freemarker config to avoid conflict
+ Changed base path of mod fop config to avoid conflict

0.5.5 (2022-11-24)
------------------
+  fj-doc-mod-fop Fixed legacy compatibility of FopConfigClassLoader see [0.5.2](https://github.com/fugerit-org/fj-doc/issues/7)

0.5.4 (2022-11-24)
------------------
+ fj-doc-mod-opencsv, added module for handling CSV format [CSV format](https://github.com/fugerit-org/fj-doc/issues/8)

0.5.3 (2022-11-21)
------------------
+ fj-doc-base fixed xsd version comparison (before was a normal string comparison)
+ fj-doc-mod-fop Fixed legacy compatibility of FopConfigClassLoader see [0.5.2](https://github.com/fugerit-org/fj-doc/issues/7)

0.5.2 (2022-11-21)
------------------
+ fj-doc-sample semplified. (Reduced to only one test facade.)
+ Introduce new FopPrtTypeHandler config attribute 'fop-config-mode' (previous mode is deprecated) see [0.5.2](https://github.com/fugerit-org/fj-doc/issues/7)

0.5.1 (2022-11-20)
------------------
+ Changed Apahe FOP version from 2.6 to 2.8
+ Fix for bug [FOP-3109](https://github.com/fugerit-org/fj-doc/issues/6)

0.5.0 (2022-11-17) [0.5-RC2]
------------------
+ Changed fj-core version to 0.8.0
+ Added parent (fj-bom 0.2.2)
+ Put in incubator and moved module [fj-doc-mod-pdfbox](https://github.com/fugerit-org/fj-doc-mod-pdfbox.git)
+ Deprecated and moved module [fj-doc-ent](https://github.com/fugerit-org/fj-doc-ent.git)
+ Deprecated and moved module [fj-doc-mod-itext](https://github.com/fugerit-org/fj-doc-mod-itext.git)
+ Deprecated and moved module [fj-doc-mod-jxl](https://github.com/fugerit-org/fj-doc-mod-jxl.git)
+ Updated README.md

0.4.2 (2022-11-07)
------------------
+ Changed fj-core version to 0.7.9

0.4.1 (2022-11-07)
------------------
+ Bump hsqldb from 2.5.0 to 2.7.1

0.4.0 (2022-11-07)
------------------
+ Changed version format to MAJOR.MINOR.PATH
+ Changed fj-core version to 0.7.8

0.3.9.4 (2022-04-06)
--------------------