@@ -1,0 +1,5 @@
+package org.fugerit.java.doc.lib.simpletable;
+
+public class SimpleTableModule {
+
+}
