@@ -1,0 +1,20 @@
+package org.fugerit.java.doc.lib.simpletable.model;
+
+public class SimpleCell {
+
+	private String content;
+
+	public String getContent() {
+		return content;
+	}
+
+	public void setContent(String content) {
+		this.content = content;
+	}
+
+	public SimpleCell(String content) {
+		super();
+		this.content = content;
+	}
+	
+}
