@@ -1,0 +1,30 @@
+<doc-process>
+
+	<chain id="shared">
+		<step id="step-01" defaultBehaviour="CONTINUE"
+			description="Apache FreeMarker Configuration" 
+			type="org.fugerit.java.doc.freemarker.config.FreeMarkerConfigStep"
+			param01="DEFAULT_CONFIG">
+			<properties 
+				version="2.3.29"
+				path="/fj_doc_lib_simpletable/template/"
+				mode="class" 
+				class="org.fugerit.java.doc.lib.simpletable.SimpleTableModule"
+				exception-handler="RETHROW_HANDLER"
+				log-exception="false"
+				wrap-unchecked-exceptions="true"
+				fallback-on-null-loop-variable="false" />
+		</step>
+	</chain>
+
+	<chain id="simple_table" extends="shared">
+		<step id="step-process" defaultBehaviour="CONTINUE"
+			description="Apply FreeMarker template to get the full XML" 
+			type="org.fugerit.java.doc.freemarker.config.FreeMarkerComplexProcessStep">
+			<properties 
+				template-path="${chainId}.ftl" 
+				map-atts="simpleTableModel"/>		
+		</step>
+	</chain>
+	
+</doc-process>
