@@ -67,6 +67,7 @@
 	<modules>
 		<module>fj-doc-base</module>
 		<module>fj-doc-freemarker</module>
+		<module>fj-doc-lib-simpletable</module>
 		<module>fj-doc-mod-poi</module>
 		<module>fj-doc-mod-fop</module>
 		<module>fj-doc-mod-opencsv</module>
@@ -112,6 +113,12 @@
 				<artifactId>fj-doc-mod-opencsv</artifactId>
 				<version>${project.version}</version>
 			</dependency>					
+		
+			<dependency>
+				<groupId>org.fugerit.java</groupId>
+				<artifactId>fj-doc-lib-simpletable</artifactId>
+				<version>${project.version}</version>
+			</dependency>	
 			
 			<dependency>
 				<groupId>org.fugerit.java</groupId>
