@@ -2,6 +2,7 @@
 ------------------
 + Changed base path of freemarker config to avoid conflict
 + Changed base path of mod fop config to avoid conflict
++ Added module fj-doc-lib-simpletable (with samples and junit)
 
 0.5.5 (2022-11-24)
 ------------------
